[package]
name = "tinker_records"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.39", features = ["clock", "now", "serde"] }
serde_json = "1.0.140"
uuid = { version = "1.15.1", features = ["serde", "std", "v7"] }
